[package]
name = "gitlink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2"
open = "5"
tiny_http = "0.12"
dirs = "5"
chrono = "0.4"
dialoguer = "0.11"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1