[package]
name = "gitlink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2"
open = "5"
tiny_http = "0.12"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
console = "0.15"
regex = "1"
walkdir = "2"
colored = "2"
once_cell = "1.21.3"
sha2 = "0.10"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
rayon = "1.8"
git2 = "0.18"
uuid = { version = "1", features = ["v4", "serde"] }
crossterm = "0.29.0"





[profile.release]
opt-level = 3
lto = true
codegen-units = 1
